# Travel-buddy-

backend/: .env.example  README.md  pyproject.toml  requirements.txt  test_api.py  test_gimap.py  test_photo_agent.py
backend/app/: __init__.py  config.py  main.py  models.py
backend/app/agents/: __init__.py  city_explorer_agent.py  dining_agent.py  hotel_booking_agent.py  lead_planner.py  orchestrator.py  photo_review_agent.py  place_research_agent.py  replanning_agent.py  travel_booking_agent.py  weather_agent.py
backend/app/tools/: __init__.py  base.py  places.py  serper.py  weather.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: ChatBox.jsx  FloatingChatbot.jsx  Hero.jsx  HomePageSections.jsx  ItineraryForm.jsx  ItineraryResult.jsx  Navbar.jsx
frontend/src/pages/: HotelBooking.jsx  TravelBooking.jsx
