[project]
name = "agentic-travel-backend"
version = "0.1.0"
description = "Agentic AI travel planner backend powered by FastAPI and LangChain"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.1",
    "langchain>=0.2.4",
    "langchain-core>=0.2.0",
    "langchain-community>=0.2.1",
    "langchain-google-genai>=1.0.5"
]

[tool.uvicorn]
app = "app.main:app"
host = "0.0.0.0"
port = 5000
reload = true

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"
